--- a/html/about.html
+++ b/html/about.html
@@ -10,9 +10,12 @@
     <div class="about" style="background-color: antiquewhite">
       <table width="90%" align="center" cellspacing="0" cellpadding="50">
         <tr>
-
           <td width="50%" align="center" valign="top">
-            <img src="../imgs/about-img.webp" alt="team Image" width="100%" />
+            <img
+              src="../imgs/about-img.webp"
+              alt="Team making donuts image"
+              width="100%"
+            />
           </td>
 
           <td width="50%" align="left" valign="top">
@@ -64,19 +67,20 @@
                 </td>
               </tr>
             </table>
-
           </td>
         </tr>
       </table>
     </div>
     <br /><br /><br />
     <div class="cards">
-        
       <table width="90%" align="center" cellspacing="20" cellpadding="20">
         <tr>
-            
           <td align="center" width="33%">
-            <img src="../imgs/card1.webp" alt="Card 1" width="100%" />
+            <img
+              src="../imgs/card1.webp"
+              alt="Classic Glazed Donut"
+              width="100%"
+            />
             <h2>Classic Glazed Donut</h2>
             <p>
               Our classic glazed donut is a timeless favorite, featuring a light
@@ -86,13 +90,18 @@
             <button
               type="button"
               style="background-color: transparent; color: black"
+              aria-label="Order donuts now"
             >
               <big>Order</big>
             </button>
           </td>
 
           <td align="center" width="33%">
-            <img src="../imgs/card2.webp" alt="Card 2" width="100%" />
+            <img
+              src="../imgs/card2.webp"
+              alt="Chocolate Sprinkle Delight"
+              width="100%"
+            />
             <h2>Chocolate Sprinkle Delight</h2>
             <p>
               Indulge in our chocolate sprinkle delight, a rich chocolate
@@ -102,13 +111,18 @@
             <button
               type="button"
               style="background-color: transparent; color: black"
+              aria-label="Order donuts now"
             >
               <big>Order</big>
             </button>
           </td>
 
           <td align="center" width="33%">
-            <img src="../imgs/card3.webp" alt="Card 3" width="100%" />
+            <img
+              src="../imgs/card3.webp"
+              alt="Seasonal Specialties"
+              width="100%"
+            />
             <h2>Seasonal Specialties</h2>
             <p>
               Experience the flavors of the season with our limited-time
@@ -118,6 +132,7 @@
             <button
               type="button"
               style="background-color: transparent; color: black"
+              aria-label="Order donuts now"
             >
               <big>Order</big>
             </button>
