--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,9 @@
       <div class="container">
         <table width="90%" cellspacing="0" cellpadding="10" align="center">
           <thead class="navContent">
-            <tr>
+            <tr
+              aria-label="Navigation bar with links to Home, About, Order, and Contact"
+            >
               <th align="center" width="20%" class="logo">
                 <font size="6" color="aliceblue">Logo</font>
               </th>
@@ -49,6 +51,7 @@
                 <button
                   type="button"
                   style="background-color: transparent; color: aliceblue"
+                  aria-label="Login to your account"
                 >
                   <big>Login</big>
                 </button>
@@ -56,6 +59,7 @@
                 <button
                   type="button"
                   style="background-color: transparent; color: aliceblue"
+                  aria-label="Sign up for a new account"
                 >
                   <big>Sign Up</big>
                 </button>
